--- a/Ishaan/home.css
+++ b/Ishaan/home.css
@@ -7,12 +7,12 @@
 body {
     background-color: #121212;
     color: white;
+    font-family: 'Montserrat', sans-serif;
 }
 
 header {
     background-color: black;
     padding: 6px 0px;
-    border-bottom: 1px solid #282828;
 }
 
 .nav_icon img,.nav_buttons img {
@@ -81,6 +81,41 @@ button {
 .signup_button{
     border:1px solid white;
 
+}
+
+.home_left{
+    background-color: #282828;
+    width:28%;
+    margin:0.5%;
+    padding: 15px;
+    height: 575px;
+    border-radius: 10px;
+    display: block;
+    padding-right: 35px;
+}
+.home_left_panel1{
+    background-color: #282828;
+    width:100%;
+    margin:0.5%;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    padding-right: 35px;
+}
+.box_home_left1{
+    background-color: #3b3838;
+    border-radius: 8px;
+    padding: 15px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+.box_home_left1_button{
+    background-color: white;
+    color: #191414;
+    font-weight: bold;
+    padding: 8px 10px;
 }
 
  
