--- a/Ishaan/home.css
+++ b/Ishaan/home.css
@@ -10,22 +10,26 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-.nav_icon img,.nav_buttons img {
+.nav_icon img,
+.nav_buttons img {
     width: 40px;
     height: 40px;
     border-radius: 8px;
     cursor: pointer;
 }
+
 nav {
     display: flex;
     align-items: center;
-    justify-content:space-between;
+    justify-content: space-between;
 }
-.nav_first{
+
+.nav_first {
     display: flex;
     justify-content: left;
 }
-.nav_icon{
+
+.nav_icon {
     padding-left: 20px;
     padding-top: 8px;
 }
@@ -36,18 +40,22 @@ nav {
     font-weight: bold;
     text-decoration: none;
 }
-.search{
+
+.search {
     background: rgb(42, 42, 42);
     border-radius: 450px;
     cursor: pointer;
     padding-inline-end: 300px;
     height: 40px;
     padding-left: 36px;
+    border: none;
 }
-.border_left{
+
+.border_left {
     border-right: 2px solid white;
     border-radius: 0%;
 }
+
 .nav_buttons {
     display: flex;
     align-items: center;
@@ -55,7 +63,7 @@ nav {
 }
 
 button {
-    all: unset;  
+    all: unset;
     padding: 8px 16px;
     background-color: transparent;
     color: white;
@@ -63,25 +71,25 @@ button {
     font-size: 14px;
     font-weight: 500;
     cursor: pointer;
-    transition: background 0.2s ease;
-    font-weight:bold;
+    font-weight: bold;
 }
 
 
-.login_button{
+.login_button {
     background-color: white;
     color: #191414;
     font-weight: bold;
 }
-.signup_button{
-    border:1px solid white;
+
+.signup_button {
+    border: 1px solid white;
 
 }
 
-.home_left{
+.home_left {
     background-color: #282828;
-    width:28%;
-    margin:0.5%;
+    width: 28%;
+    margin: 0.5%;
     padding: 15px;
     height: 575px;
     border-radius: 10px;
@@ -89,16 +97,18 @@ button {
     flex-direction: column;
     padding-right: 35px;
 }
-.home_left_panel1{
+
+.home_left_panel1 {
     background-color: #282828;
-    width:100%;
-    margin:0.5%;
+    width: 100%;
+    margin: 0.5%;
     padding: 15px;
     display: flex;
     justify-content: space-between;
-    padding-right: 35px;
+    padding-right: 15px;
 }
-.box_home_left1{
+
+.box_home_left1 {
     background-color: #3b3838;
     border-radius: 8px;
     padding: 15px;
@@ -109,11 +119,88 @@ button {
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.box_home_left1_button{
+
+.box_home_left1_button {
     background-color: white;
     color: #191414;
     font-weight: bold;
     padding: 8px 10px;
 }
 
- 
+.box_home_left3 {
+    font-size: 9px;
+    padding-left: 15px;
+    padding-top: 5px;
+    display: flex;
+    gap: 25px;
+    flex-wrap: wrap;
+}
+
+.cookie {
+    padding-left: 15px;
+    padding-top: 10px;
+    font-size: 12px;
+    font-weight: 150;
+    margin-top: 5px;
+}
+
+.language {
+    padding-left: 15px;
+    padding-top: 10px;
+    margin-top: 15px;
+}
+
+.english {
+    border: 1px solid white;
+    width: 100px;
+    border-radius: 500px;
+    padding: 10px 17px;
+    font-weight: bold;
+}
+
+.section {
+    display: flex;
+}
+
+.home_right {
+    background-color: #282828;
+    width: 70%;
+    margin: 0.5%;
+    padding: 25px 40px;
+    height: 575px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    padding-right: 35px;
+    overflow-y: auto;
+}
+.trending_now{
+    display: flex;
+    overflow-x: auto;
+    gap: 20px;
+    padding-bottom: 10px;
+    scrollbar-width: none;
+}
+
+.card {
+    width: 170px;
+    background-color: rgba(88, 84, 84, 0.21);
+    border-radius: 15px;
+    margin-top: 30px;
+    height: auto;
+    min-height: 225px;
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    text-align: center;
+}
+
+.card_poster {
+    height: 120px;
+    width: 100%;
+    border-radius: 12px;
+    object-fit: cover;
+    display: block;
+}
