--- a/Spotify.css
+++ b/Spotify.css
@@ -1,49 +1,42 @@
 body {
     background-color: black;
 }
-.Tooltip {
-    
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
+}
+.nav-center, .nav-right {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .Spotify-logo-button {
-    display: inline-block;
-    border-radius: 50%;
+   display: flex;
+    border-radius:50% ;
     cursor: pointer;
-    width: 34px;
-    height: 34px;
+    width: 32px;
+    height: 32px;
+    margin-top:4px ;
     margin-left: 20px;
-    margin-top: 8px;
-    
-
 }
 .Home-icon {
-    display: inline-block;
+   display: flex;
     border-radius: 50%;
     cursor: pointer;
     width: 45px;
     height: 45px;
-    position: absolute;
-    top: 10px;
-    left: 505px;
+    margin-right: 8px;
+    margin-left: 180px;
 }
-.Spotify-logo-button img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.Home-icon img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+
+
 .Search-bar {
     border-radius: 25px 25px 25px 25px;
     cursor: pointer;
     width: 420px;
     height: 45px;
-    position: absolute;
-    top: 10px;
-    left: 560px;
     background-color: rgb(44, 43, 43);
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 17px;
@@ -53,31 +46,36 @@ body {
     background-position: 10px;
     padding-left: 45px;
     border: none; 
+
 }
 .App-Link {
     text-decoration: none;
+    white-space: nowrap;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: whitesmoke;
-    position: absolute;
-    top: 20px;
-    left: 1290px;
+    color: rgb(165, 162, 162);
+    margin-right: 34px;
+    margin-left: 5px;
     font-size: 14px;
 }
 .New-Feed {
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    position: absolute;
-    top: 25px;
-    left: 1398px;
-   
+    display: flex;
+    width: 17px;
+    height: 17px;
+    margin-right: 20px;
 }
 .Friend-Activity {
-  display: inline-block;
-    width: 18px;
-   height: 18px;
-    position: absolute;
-    top: 25px;
-    left: 1440px;
-
+ display: flex;
+  cursor: pointer;
+     width: 21px;
+   height: 21px;
+   margin-right: 22px;
+}
+.Account img {
+    display: flex;
+    cursor: pointer;
+    border: 7.5px solid;
+    border-radius: 50%;
+    border-color: rgb(58, 58, 58);
+    margin-right:3.5px ;
+    width:32px;
 }
